src/main/java/org/schorn/ella/antlr/SpecParser.java
// Generated from src\main\java\org\schorn\ella\antlr\SpecParser.g4 by ANTLR 4.7.2
package org.schorn.ella.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SpecParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ATTRIBUTES=1, FIELD_TYPES=2, VALUE_TYPES=3, FRAGMENTS=4, OBJECT_TYPES=5, 
		TEMPLATES=6, ARRAY_TYPES=7, MEMBERS=8, PARENTS=9, DATA_TYPE=10, DATA_CATEGORY=11, 
		DATA_PURPOSE=12, DATA_LEVEL=13, FIELD_TYPE=14, VALUE_TYPE=15, FRAGMENT=16, 
		OBJECT_TYPE=17, TEMPLATE=18, ARRAY_TYPE=19, MEMBER=20, PARENT=21, BOND_TYPE=22, 
		CMD_ACTION_READ=23, CMD_OBJECT_FILE=24, DEFINE=25, ADD=26, MAX=27, MIN=28, 
		TYPE_NAME_DEF=29, ENUM_ID=30, TYPE_NAME_REF=31, TEXT_LENGTH=32, DECIMAL_LITERAL=33, 
		FLOAT_LITERAL=34, CHAR_LITERAL=35, TEXT_PATTERN=36, STRING_LITERAL=37, 
		NULL_LITERAL=38, OPHAT=39, OPDOLLAR=40, OPTILDE=41, OPAT=42, OPHASH=43, 
		OPPIPE=44, OPDBLQUOTE=45, LPAREN=46, RPAREN=47, LSBRACKET=48, RSBRACKET=49, 
		LABRACKET=50, RABRACKET=51, LBRACE=52, RBRACE=53, COMMA=54, DOT=55, COLON=56, 
		SEMI=57, WS=58, COMMENT=59, LINE_COMMENT=60;
	public static final int
		RULE_def = 0, RULE_typeCreation = 1, RULE_defineType = 2, RULE_typeAttributes = 3, 
		RULE_typeAttribute = 4, RULE_parameters = 5, RULE_parameter = 6, RULE_command = 7, 
		RULE_cmdPath = 8, RULE_listOfValues = 9, RULE_listValue = 10, RULE_attrCreation = 11, 
		RULE_addTypeToAttr = 12, RULE_attributeAttributes = 13, RULE_attributeAttribute = 14, 
		RULE_typeFlavor = 15, RULE_attrFlavor = 16, RULE_typeQualifier = 17, RULE_flagQualifier = 18, 
		RULE_enumQualifier = 19, RULE_cmdAction = 20, RULE_cmdObject = 21, RULE_cmd = 22, 
		RULE_enumID = 23, RULE_typeNameRef = 24, RULE_typeNameDef = 25, RULE_pattern = 26, 
		RULE_number = 27, RULE_datetime = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"def", "typeCreation", "defineType", "typeAttributes", "typeAttribute", 
			"parameters", "parameter", "command", "cmdPath", "listOfValues", "listValue", 
			"attrCreation", "addTypeToAttr", "attributeAttributes", "attributeAttribute", 
			"typeFlavor", "attrFlavor", "typeQualifier", "flagQualifier", "enumQualifier", 
			"cmdAction", "cmdObject", "cmd", "enumID", "typeNameRef", "typeNameDef", 
			"pattern", "number", "datetime"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Attributes'", "'FieldTypes'", "'ValueTypes'", "'Fragments'", 
			"'ObjectTypes'", "'Templates'", "'ArrayTypes'", "'Members'", "'Parents'", 
			"'DataType'", "'DataCategory'", "'DataPurpose'", "'DataLevel'", "'FieldType'", 
			"'ValueType'", "'Fragment'", "'ObjectType'", "'Template'", "'ArrayType'", 
			"'Member'", "'Parent'", "'BondType'", "'Read'", "'File'", "'def'", "'add'", 
			"'MAX'", "'MIN'", null, null, null, null, null, null, null, null, null, 
			"'null'", "'^'", "'$'", "'~'", "'@'", "'#'", "'|'", "'\"'", "'('", "')'", 
			"'['", "']'", "'<'", "'>'", "'{'", "'}'", "','", "'.'", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ATTRIBUTES", "FIELD_TYPES", "VALUE_TYPES", "FRAGMENTS", "OBJECT_TYPES", 
			"TEMPLATES", "ARRAY_TYPES", "MEMBERS", "PARENTS", "DATA_TYPE", "DATA_CATEGORY", 
			"DATA_PURPOSE", "DATA_LEVEL", "FIELD_TYPE", "VALUE_TYPE", "FRAGMENT", 
			"OBJECT_TYPE", "TEMPLATE", "ARRAY_TYPE", "MEMBER", "PARENT", "BOND_TYPE", 
			"CMD_ACTION_READ", "CMD_OBJECT_FILE", "DEFINE", "ADD", "MAX", "MIN", 
			"TYPE_NAME_DEF", "ENUM_ID", "TYPE_NAME_REF", "TEXT_LENGTH", "DECIMAL_LITERAL", 
			"FLOAT_LITERAL", "CHAR_LITERAL", "TEXT_PATTERN", "STRING_LITERAL", "NULL_LITERAL", 
			"OPHAT", "OPDOLLAR", "OPTILDE", "OPAT", "OPHASH", "OPPIPE", "OPDBLQUOTE", 
			"LPAREN", "RPAREN", "LSBRACKET", "RSBRACKET", "LABRACKET", "RABRACKET", 
			"LBRACE", "RBRACE", "COMMA", "DOT", "COLON", "SEMI", "WS", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SpecParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SpecParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DefContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SpecParser.EOF, 0); }
		public List<TypeCreationContext> typeCreation() {
			return getRuleContexts(TypeCreationContext.class);
		}
		public TypeCreationContext typeCreation(int i) {
			return getRuleContext(TypeCreationContext.class,i);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FIELD_TYPES) | (1L << VALUE_TYPES) | (1L << FRAGMENTS) | (1L << OBJECT_TYPES) | (1L << TEMPLATES) | (1L << ARRAY_TYPES))) != 0)) {
				{
				{
				setState(58);
				typeCreation();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeCreationContext extends ParserRuleContext {
		public TypeFlavorContext typeFlavor() {
			return getRuleContext(TypeFlavorContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(SpecParser.SEMI, 0); }
		public List<TerminalNode> DOT() { return getTokens(SpecParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(SpecParser.DOT, i);
		}
		public List<DefineTypeContext> defineType() {
			return getRuleContexts(DefineTypeContext.class);
		}
		public DefineTypeContext defineType(int i) {
			return getRuleContext(DefineTypeContext.class,i);
		}
		public TypeCreationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeCreation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterTypeCreation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitTypeCreation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitTypeCreation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeCreationContext typeCreation() throws RecognitionException {
		TypeCreationContext _localctx = new TypeCreationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_typeCreation);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			typeFlavor();
			setState(69); 
			_errHandler.sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					setState(67);
					match(DOT);
					setState(68);
					defineType();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(71); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(73);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineTypeContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(SpecParser.DEFINE, 0); }
		public TerminalNode LPAREN() { return getToken(SpecParser.LPAREN, 0); }
		public TypeNameDefContext typeNameDef() {
			return getRuleContext(TypeNameDefContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SpecParser.RPAREN, 0); }
		public List<TypeAttributesContext> typeAttributes() {
			return getRuleContexts(TypeAttributesContext.class);
		}
		public TypeAttributesContext typeAttributes(int i) {
			return getRuleContext(TypeAttributesContext.class,i);
		}
		public DefineTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterDefineType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitDefineType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitDefineType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineTypeContext defineType() throws RecognitionException {
		DefineTypeContext _localctx = new DefineTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defineType);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(DEFINE);
			setState(76);
			match(LPAREN);
			setState(77);
			typeNameDef();
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(78);
					typeAttributes();
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(84);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeAttributesContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(SpecParser.COMMA, 0); }
		public TypeAttributeContext typeAttribute() {
			return getRuleContext(TypeAttributeContext.class,0);
		}
		public TypeAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeAttributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterTypeAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitTypeAttributes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitTypeAttributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeAttributesContext typeAttributes() throws RecognitionException {
		TypeAttributesContext _localctx = new TypeAttributesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeAttributes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(COMMA);
			setState(87);
			typeAttribute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeAttributeContext extends ParserRuleContext {
		public EnumQualifierContext enumQualifier() {
			return getRuleContext(EnumQualifierContext.class,0);
		}
		public TerminalNode DOT() { return getToken(SpecParser.DOT, 0); }
		public EnumIDContext enumID() {
			return getRuleContext(EnumIDContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(SpecParser.LPAREN, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SpecParser.RPAREN, 0); }
		public TypeQualifierContext typeQualifier() {
			return getRuleContext(TypeQualifierContext.class,0);
		}
		public TypeNameRefContext typeNameRef() {
			return getRuleContext(TypeNameRefContext.class,0);
		}
		public AttrCreationContext attrCreation() {
			return getRuleContext(AttrCreationContext.class,0);
		}
		public TypeAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterTypeAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitTypeAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitTypeAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeAttributeContext typeAttribute() throws RecognitionException {
		TypeAttributeContext _localctx = new TypeAttributeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeAttribute);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				enumQualifier();
				setState(90);
				match(DOT);
				setState(91);
				enumID();
				setState(92);
				match(LPAREN);
				setState(93);
				parameters();
				setState(94);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				enumQualifier();
				setState(97);
				match(DOT);
				setState(98);
				enumID();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				typeQualifier();
				setState(101);
				match(DOT);
				setState(102);
				typeNameRef();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				attrCreation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SpecParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SpecParser.COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			parameter();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(108);
				match(COMMA);
				setState(109);
				parameter();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public DatetimeContext datetime() {
			return getRuleContext(DatetimeContext.class,0);
		}
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public List<TypeNameRefContext> typeNameRef() {
			return getRuleContexts(TypeNameRefContext.class);
		}
		public TypeNameRefContext typeNameRef(int i) {
			return getRuleContext(TypeNameRefContext.class,i);
		}
		public TerminalNode DOT() { return getToken(SpecParser.DOT, 0); }
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public ListOfValuesContext listOfValues() {
			return getRuleContext(ListOfValuesContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameter);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLOAT_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				number();
				}
				break;
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				datetime();
				}
				break;
			case TEXT_PATTERN:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				pattern();
				}
				break;
			case TYPE_NAME_REF:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				typeNameRef();
				setState(119);
				match(DOT);
				setState(120);
				typeNameRef();
				}
				break;
			case CMD_ACTION_READ:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				command();
				}
				break;
			case LSBRACKET:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				listOfValues();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(SpecParser.LPAREN, 0); }
		public CmdPathContext cmdPath() {
			return getRuleContext(CmdPathContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SpecParser.RPAREN, 0); }
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			cmd();
			setState(127);
			match(LPAREN);
			setState(128);
			cmdPath();
			setState(129);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdPathContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(SpecParser.STRING_LITERAL, 0); }
		public CmdPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterCmdPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitCmdPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitCmdPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdPathContext cmdPath() throws RecognitionException {
		CmdPathContext _localctx = new CmdPathContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmdPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListOfValuesContext extends ParserRuleContext {
		public TerminalNode LSBRACKET() { return getToken(SpecParser.LSBRACKET, 0); }
		public List<ListValueContext> listValue() {
			return getRuleContexts(ListValueContext.class);
		}
		public ListValueContext listValue(int i) {
			return getRuleContext(ListValueContext.class,i);
		}
		public TerminalNode RSBRACKET() { return getToken(SpecParser.RSBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SpecParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SpecParser.COMMA, i);
		}
		public ListOfValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOfValues; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterListOfValues(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitListOfValues(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitListOfValues(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListOfValuesContext listOfValues() throws RecognitionException {
		ListOfValuesContext _localctx = new ListOfValuesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listOfValues);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(LSBRACKET);
			setState(134);
			listValue();
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(135);
					match(COMMA);
					setState(136);
					listValue();
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(142);
			match(RSBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListValueContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(SpecParser.STRING_LITERAL, 0); }
		public ListValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).enterListValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecParserListener ) ((SpecParserListener)listener).exitListValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecParserVisitor ) return ((SpecParserVisitor<? extends T>)visitor).visitListValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListValueContext listValue() throws RecognitionException {
		ListValueContext _localctx = new ListValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_listValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
